--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "verhoeff",
   "version": "1.0.0",
   "description": "Verhoeff check-digit",
-  "main": "verhoeff.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "jest --coverage",
-    "start": "node verhoeff.js"
+    "test": "jest --coverage"
   },
   "contributors": [
     {
